--- a/loops.html
+++ b/loops.html
@@ -60,18 +60,65 @@
 // }console.log(i)
 // }
 
- for (let i=1; i<=8; i=i+2){
-    if(i>=4){
-        break
-    }
-    console.log(i)
- }
+//  for (let i=1; i<=8; i=i+1){
+//     if(i==5){
+//         break
+//     }
+//     console.log(i)
+//  }
+
+//  for (let i=1; i<=8; i=i+1){
+//     if(i==5){
+//        continue
+//     }
+//     console.log(i)
+//  }
+
+//  for (let i=1; i<=8; i=i+2){
+//     if(i>5){
+//        continue
+//     }
+//     console.log(i)
+//  }
+
+// const s="ramya"
+// for(let i in s){
+// console.log(s[i]);
+
+// for (let i=1; i<=3; i++){
+//     document.write(i,"<br>");
+// //inner loop
+
+//   for(let j=1;j<=4; j++){
+//     document.write(j," ");
+//   }
+//   document.write("<br>")
+// }
+// Number of rows for the pyramid
+
+
+// const rows = 5;
+// for (let i = 1; i <= rows; i++) {
+//   console.log('*'.repeat(i));
+// }
+
+let n=5;
+        for(let i=1;i<=n;i++){
+            for(let j=1;j<=n-i;j++){
+                document.write("&nbsp;&nbsp;")
+            }
+            for(let j=1;j<=2*i-1;j++){
+                document.write("*")
+            }
+            document.write("<br>")
+        }
 
 
 
-        // const s="ramya"
-        // for(let i in s){
-        // console.log(s[i]);
+
+
+
+
    
         
 
