--- a/DOM.html
+++ b/DOM.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colorful Headings</title>
-    <style>
+    <!-- <style>
         .a {
             color: red;
         }
@@ -31,6 +31,29 @@
     <h1 class="c">chakri</h1>
     <h1 class="d">yesh</h1>
     <h1 class="e">siva</h1>
-    <h1 class="f">vasu</h1>
+    <h1 class="f">vasu</h1> -->
+
+    <!-- <h1 id="aa" class="a">Iam Sai</h1>
+    <h2 id="b" class="b">Iam sam</h2>
+    <h1 id="c" class="c">Iam Ravi</h1>
+
+    <h2 class="a">Iam Kavya</h2>
+    <script>
+        let x=document.querySelectorAll('h1')
+        console.log(x) -->
+        <script>
+    const t = ['vinny','vasu','chakri']
+    for(let i=0; i<t.length; i++){
+    let tt=document.createElement("h1")
+    tt.className="a"
+    tt.textContent=t[i];
+    console.log(tt)
+    }
+    </script>
+
+   
+    
+    
+</script>
 </body>
 </html>
